--- a/mysql/defaults.yaml
+++ b/mysql/defaults.yaml
@@ -1,6 +1,8 @@
 # -*- coding: utf-8 -*-
 # vim: ft=yaml
 mysql:
+  client: True
+  server: False
   application: mysql
   version: 5.6
   manage_repo: False
